# opencloudtouch

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  UPGRADING.md  check_enc.py  mypy.ini  package-lock.json  package.json  preset_final.xml  sonar-project.properties
.github/: CONTRIBUTING.md  FUNDING.yml
community/: README.md
deployment/: Dockerfile  LOCAL-DEPLOYMENT.md  README.md  docker-compose.yml
doc/: 01-api-endpoints.md  02-websocket-events.md  03-preset-management.md  04-zone-management.md  10-upstream-urls.md  11-device-redirect-methods.md  FAQ.md  (+24 more)
scripts/issue_handler/: cost_tracker.py  github_client.py  main.py  models.py  pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt  rules.yml  sanitizer.py
scripts/issue_handler/knowledge_base/: __init__.py
scripts/issue_handler/knowledge_base/approved_answers/: bug_report_required.md  discovery.md  installation.md  presets.md  unsupported_setups.md
scripts/issue_handler/stages/: action.py  classifier.py  hard_exit.py  heuristic.py  rate_limiter.py  rule_engine.py
scripts/issue_handler/tests/: conftest.py  test_action.py  test_classifier.py  test_cost_tracker.py  test_github_client.py  test_hard_exit.py  test_heuristic.py  test_integration.py  test_knowledge_base.py  test_main.py  test_models.py  test_pipeline.py  test_rate_limiter.py  test_rule_engine.py  test_sanitizer.py
scripts/issue_handler/tests/fixtures/: discussion_created.json  issue_comment_created.json  issue_edited.json  issue_opened.json
(+507 files in other folders)
