[project]
name = "issue-handler"
version = "0.1.0"
description = "AI-powered GitHub issue handler for OpenCloudTouch"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."
exclude = ["tests/"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", "conftest.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
